welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: not found: value dejaFait
dejaFait= 0
^Variables:7: error: not found: value prendbiscuit
prendbiscuit();
^Variables:8: error: not found: value dejaFait
while(dejaFait!= s){
      ^Variables:10: error: not found: value dejaFait
	dejaFait= dejaFait+1
        ^